--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -13,4 +13,13 @@ jobs:
       run: |
             docker run --rm dockcross/windows-shared-x86 > ./xcross; chmod +x ./xcross; sudo mv ./xcross /usr/bin/
             xcross make
-            ll
+            ls -la
+
+    - name: Publish artefacts
+      uses: svenstaro/upload-release-action@v1-release
+      with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: '/usr/src/mxe/usr/bin/i686-w64-mingw32.shared-gcc/hello-win32.exe'
+          asset_name: 'hello-win32.exe'
+          tag: ${{ github.ref }}
+          overwrite: true
